syntax="proto3";

package comments;

import "google/protobuf/timestamp.proto";

option go_package="./proto/comments";

message Comment {
    string CommentID = 1;
    int32 SerialNumber = 2;
    string Name = 3;
    string Email = 4;
    string Comment = 5;
    google.protobuf.Timestamp CreatedAt = 6;
}

message Filter {
    int32 Offset = 1;
    int32 Limit = 2;
    string SortBy = 3;
    string Order = 4;
    string SearchTerm = 5;
}

message CreateCommentRequest {
    Comment Comm = 1;
}

message CreateCommentResponse {
    string CommentID = 1;
}

message GetCommentRequest {
    Comment Comm = 1;
}

message GetCommentResponse {
    Comment Comm = 1;
}

message ListCommentRequest {
    Filter Filter = 1;
}

message ListCommentResponse {
   repeated Comment Comm = 1;
}

service CommentService {
    rpc CreateComment(CreateCommentRequest) returns(CreateCommentResponse) {}
    rpc GetComment(GetCommentRequest) returns(GetCommentResponse) {}
    rpc ListComment(ListCommentRequest) returns(ListCommentResponse) {}
}